category table added

--- a/index.html
+++ b/index.html
@@ -1239,7 +1239,7 @@
     </script>
     <script src="lib/angular/angular.min.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
     <!-- Bootstrap 4 -->
     <script src="plugins/bootstrap/js/bootstrap.bundle.min.js "></script>
     <!-- ChartJS -->
@@ -1269,7 +1269,7 @@
     <!-- Controller JS -->
     <script src="master/category/category.js"></script>
     <!-- Services -->
-    <!-- <script src="/master/category/categoryService.js"></script> -->
+    <script src="/master/category/categoryService.js"></script>
 
     <script>
       $(document).ready(function () {
