Integration in progress

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <!-- Sweet Alert -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
   </head>
 
   <body class="hold-transition sidebar-mini layout-fixed">
@@ -581,7 +583,7 @@
                   <li class="nav-item">
                     <a href="#!/category" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
-                      <p>Category</p>
+                      <p ng-click="tabShow=true">Category</p>
                     </a>
                   </li>
                   <li class="nav-item">
