Pagination and api integration done

--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
                   <li class="nav-item">
                     <a href="#!/category" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
-                      <p ng-click="tabShow=true">Category</p>
+                      <p>Category</p>
                     </a>
                   </li>
                   <li class="nav-item">
@@ -1153,6 +1153,11 @@
     <script src="master/category/category.js"></script>
     <!-- Services -->
     <script src="/master/category/categoryService.js"></script>
+    <!-- Pagination -->
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-animate.js"></script>
+    <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.4.js"></script>
+    <link rel="stylesheet" href="/dist/js/angular.js">
+    <link rel="stylesheet" href="/dist/css/pagination.css">
 
     <script>
       $(document).ready(function () {
