API added for product

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>AdminLTE 3 | Dashboard</title>
+    <title>Executive Tracking | Dashboard</title>
 
     <!-- Google Font: Source Sans Pro -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback"
@@ -241,7 +241,7 @@
             class="brand-image img-circle elevation-3"
             style="opacity: 0.8"
           />
-          <span class="brand-text font-weight-light">AdminLTE 3</span>
+          <span class="brand-text font-weight-light">Executive Tracking</span>
         </a>
 
         <!-- Sidebar -->
@@ -256,7 +256,7 @@
               />
             </div>
             <div class="info">
-              <a href="#" class="d-block">Alexander Pierce</a>
+              <a href="#" class="d-block">Sir M Visvesvaraya</a>
             </div>
           </div>
 
@@ -587,13 +587,13 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="#!/product" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
                       <p>Product</p>
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="#!/region" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
                       <p>Region</p>
                     </a>
@@ -1150,9 +1150,12 @@
     <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
     <script src="dist/js/pages/dashboard.js "></script>
     <!-- Controller JS -->
-    <script src="master/category/category.js"></script>
+    <script src="/master/category/category.js"></script>
+    <script src="/master/Product/product.js"></script>
     <!-- Services -->
     <script src="/master/category/categoryService.js"></script>
+    <script src="/master/Product/productService.js"></script>
+
     <!-- Pagination -->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-animate.js"></script>
     <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.4.js"></script>
