Updating four models in master

--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="#!/site" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
                       <p>Site</p>
                     </a>
@@ -1152,9 +1152,13 @@
     <!-- Controller JS -->
     <script src="/master/category/category.js"></script>
     <script src="/master/Product/product.js"></script>
+    <script src="/master/Region/region.js"></script>
+    <script src="/master/Site/site.js"></script>
     <!-- Services -->
     <script src="/master/category/categoryService.js"></script>
     <script src="/master/Product/productService.js"></script>
+    <script src="/master/Region/regionService.js"></script>
+    <script src="/master/Site/siteService.js"></script>
 
     <!-- Pagination -->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-animate.js"></script>
