--- a/index.html
+++ b/index.html
@@ -6,33 +6,27 @@
     <title>Executive Tracking | Dashboard</title>
 
     <!-- Google Font: Source Sans Pro -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback"/>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css" />
     <!-- Ionicons -->
-    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
-    />
+    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"/>
     <!-- Tempusdominus Bootstrap 4 -->
-    <link rel="stylesheet" href="plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css"
-    />
+    <link rel="stylesheet" href="plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css"/>
     <!-- iCheck -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
     <!-- JQVMap -->
     <link rel="stylesheet" href="plugins/jqvmap/jqvmap.min.css" />
     <!-- Theme style -->
     <link rel="stylesheet" href="dist/css/adminlte.min.css" />
     <!-- overlayScrollbars -->
-    <link rel="stylesheet" href="plugins/overlayScrollbars/css/OverlayScrollbars.min.css"
-    />
+    <link rel="stylesheet" href="plugins/overlayScrollbars/css/OverlayScrollbars.min.css"/>
     <!-- Daterange picker -->
     <link rel="stylesheet" href="plugins/daterangepicker/daterangepicker.css" />
     <!-- summernote -->
     <link rel="stylesheet" href="plugins/summernote/summernote-bs4.min.css" />
     <!-- Latest compiled and minified CSS -->
-    <link
-      rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/dist/css/mystyle.css">
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -60,7 +54,7 @@
             ></a>
           </li>
           <li class="nav-item d-none d-sm-inline-block">
-            <a href="index3.html" class="nav-link">Home</a>
+            <a href="index.html" class="nav-link">Home</a>
           </li>
           <li class="nav-item d-none d-sm-inline-block">
             <a href="#" class="nav-link">Contact</a>
@@ -72,28 +66,17 @@
           <!-- Navbar Search -->
           <li class="nav-item">
             <a class="nav-link" data-widget="navbar-search" href="#" role="button">
-              <i class="fas fa-search"></i>
-            </a>
+              <i class="fas fa-search"></i></a>
             <div class="navbar-search-block">
               <form class="form-inline">
                 <div class="input-group input-group-sm">
-                  <input
-                    class="form-control form-control-navbar"
-                    type="search"
-                    placeholder="Search"
-                    aria-label="Search"
-                  />
+                  <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search"/>
                   <div class="input-group-append">
                     <button class="btn btn-navbar" type="submit">
                       <i class="fas fa-search"></i>
                     </button>
-                    <button
-                      class="btn btn-navbar"
-                      type="button"
-                      data-widget="navbar-search"
-                    >
-                      <i class="fas fa-times"></i>
-                    </button>
+                    <button class="btn btn-navbar" type="button" data-widget="navbar-search">
+                      <i class="fas fa-times"></i></button>
                   </div>
                 </div>
               </form>
@@ -112,16 +95,12 @@
                 <div class="media">
                   <img src="dist/img/user1-128x128.jpg" alt="User Avatar" class="img-size-50 mr-3 img-circle"/>
                   <div class="media-body">
-                    <h3 class="dropdown-item-title">
-                      Brad Diesel
-                      <span class="float-right text-sm text-danger"
-                        ><i class="fas fa-star"></i
-                      ></span>
+                    <h3 class="dropdown-item-title">Brad Diesel
+                      <span class="float-right text-sm text-danger"><i class="fas fa-star"></i></span>
                     </h3>
                     <p class="text-sm">Call me whenever you can...</p>
                     <p class="text-sm text-muted">
-                      <i class="far fa-clock mr-1"></i> 4 Hours Ago
-                    </p>
+                      <i class="far fa-clock mr-1"></i> 4 Hours Ago</p>
                   </div>
                 </div>
                 <!-- Message End -->
@@ -154,17 +133,10 @@
               <a href="#" class="dropdown-item">
                 <!-- Message Start -->
                 <div class="media">
-                  <img
-                    src="dist/img/user3-128x128.jpg"
-                    alt="User Avatar"
-                    class="img-size-50 img-circle mr-3"
-                  />
+                  <img src="dist/img/user3-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3"/>
                   <div class="media-body">
-                    <h3 class="dropdown-item-title">
-                      Nora Silvester
-                      <span class="float-right text-sm text-warning"
-                        ><i class="fas fa-star"></i
-                      ></span>
+                    <h3 class="dropdown-item-title">Nora Silvester
+                      <span class="float-right text-sm text-warning"><i class="fas fa-star"></i></span>
                     </h3>
                     <p class="text-sm">The subject goes here</p>
                     <p class="text-sm text-muted">
@@ -234,13 +206,9 @@
       <!-- Main Sidebar Container -->
       <aside class="main-sidebar sidebar-dark-primary elevation-6">
         <!-- Brand Logo -->
-        <a href="index3.html" class="brand-link">
-          <img
-            src="dist/img/AdminLTELogo.png"
-            alt="AdminLTE Logo"
-            class="brand-image img-circle elevation-3"
-            style="opacity: 0.8"
-          />
+        <a href="index.html" class="brand-link">
+          <img src="dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
+            style="opacity: 0.8"/>
           <span class="brand-text font-weight-light">Executive Tracking</span>
         </a>
 
@@ -249,11 +217,7 @@
           <!-- Sidebar user panel (optional) -->
           <div class="user-panel mt-3 pb-3 mb-3 d-flex">
             <div class="image">
-              <img
-                src="dist/img/user2-160x160.jpg"
-                class="img-circle elevation-2"
-                alt="User Image"
-              />
+              <img src="dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image"/>
             </div>
             <div class="info">
               <a href="#" class="d-block">Sir M Visvesvaraya</a>
@@ -263,12 +227,7 @@
           <!-- SidebarSearch Form -->
           <div class="form-inline">
             <div class="input-group" data-widget="sidebar-search">
-              <input
-                class="form-control form-control-sidebar"
-                type="search"
-                placeholder="Search"
-                aria-label="Search"
-              />
+              <input class="form-control form-control-sidebar" type="search" placeholder="Search" aria-label="Search"/>
               <div class="input-group-append">
                 <button class="btn btn-sidebar">
                   <i class="fas fa-search fa-fw"></i>
@@ -279,62 +238,27 @@
 
           <!-- Sidebar Menu -->
           <nav class="mt-2">
-            <ul
-              class="nav nav-pills nav-sidebar flex-column"
-              data-widget="treeview"
-              role="menu"
-              data-accordion="false"
-            >
+            <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
               <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
               <li class="nav-item menu-open">
                 <a href="#" class="nav-link active">
                   <i class="nav-icon fas fa-tachometer-alt"></i>
-                  <p>
-                    Dashboard
-                    <i class="right fas fa-angle-left"></i>
-                  </p>
-                </a>
-                <ul class="nav nav-treeview">
+                  <p>Dashboard<i class="right fas fa-angle-left"></i></p>
+                </a><ul class="nav nav-treeview">
                   <li class="nav-item">
                     <a href="./index.html" class="nav-link active">
                       <i class="far fa-circle nav-icon"></i>
                       <p>Dashboard v1</p>
                     </a>
                   </li>
-                  <li class="nav-item">
-                    <a href="./index2.html" class="nav-link">
-                      <i class="far fa-circle nav-icon"></i>
-                      <p>Dashboard v2</p>
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a href="./index3.html" class="nav-link">
-                      <i class="far fa-circle nav-icon"></i>
-                      <p>Dashboard v3</p>
-                    </a>
-                  </li>
                 </ul>
-              </li>
-              <li class="nav-item">
-                <a href="pages/widgets.html" class="nav-link">
-                  <i class="nav-icon fas fa-th"></i>
-                  <p>
-                    Widgets
-                    <span class="right badge badge-danger">New</span>
-                  </p>
-                </a>
               </li>
               <li class="nav-item">
                 <a href="#!/task" class="nav-link">
                   <i class="nav-icon fas fa-tasks"></i>
-                  <p
-                    data-toggle="tooltip"
-                    data-placement="top"
-                    title="Task Management"
-                  >
-                    Task <i class="fas fa-angle-left right"></i
-                    ><span class="badge badge-info right">6</span>
+                  <p data-toggle="tooltip" data-placement="top" title="Task Management">
+                    Task <i class="fas fa-angle-left right"></i><span class="badge badge-info right">6</span>
                   </p>
                 </a>
                 <ul class="nav nav-treeview">
@@ -345,10 +269,7 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a
-                      href="pages/layout/top-nav-sidebar.html"
-                      class="nav-link"
-                    >
+                    <a href="pages/layout/top-nav-sidebar.html" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
                       <p>Top Navigation + Sidebar</p>
                     </a>
@@ -387,10 +308,7 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a
-                      href="pages/layout/collapsed-sidebar.html"
-                      class="nav-link"
-                    >
+                    <a  href="pages/layout/collapsed-sidebar.html" class="nav-link">
                       <i class="far fa-circle nav-icon"></i>
                       <p>Collapsed Sidebar</p>
                     </a>
@@ -885,10 +803,7 @@
                         </a>
                       </li>
                       <li class="nav-item">
-                        <a
-                          href="pages/examples/recover-password-v2.html "
-                          class="nav-link"
-                        >
+                        <a href="pages/examples/recover-password-v2.html " class="nav-link">
                           <i class="far fa-circle nav-icon"></i>
                           <p>Recover Password v2</p>
                         </a>
@@ -1089,19 +1004,13 @@
         <!-- Main content -->
  
         <!-- /.content -->
-      </div> -->
+      </div>
       <div ng-view></div>
       <!-- /.content-wrapper -->
       <footer class="main-footer">
-        <strong
-          >Copyright &copy; 2021
-          <a href="https://www.walkinsoftwares.com/ ">Walkin Software</a
-          >.</strong
-        >
+        <strong>Copyright &copy; 2021<a href="https://www.walkinsoftwares.com/ ">Walkin Software</a>.</strong>
         All rights reserved.
-        <div class="float-right d-none d-sm-inline-block">
-          <b>Version</b> 3.1.0
-        </div>
+        <div class="float-right d-none d-sm-inline-block"><b>Version</b> 3.1.0</div>
       </footer>
 
       <!-- Control Sidebar -->
