Few changes made

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!-- Left navbar links -->
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" data-widget="pushmenu" href="#" role="button"
+            <a class="nav-link" data-widget="pushmenu" href="" role="button"
               ><i class="fas fa-bars"></i
             ></a>
           </li>
@@ -318,11 +318,7 @@
               <li class="nav-item">
                 <a href="#" class="nav-link">
                   <i class="nav-icon fas fa-rupee-sign"></i>
-                  <p
-                    data-toggle="tooltip"
-                    data-placement="top"
-                    title="Expenditure Management"
-                  >
+                  <p data-toggle="tooltip" data-placement="top" title="Expenditure Management">
                     Expenditure
                     <i class="right fas fa-angle-left"></i>
                   </p>
@@ -994,7 +990,7 @@
       </aside>
 
       <!-- Content Wrapper. Contains page content -->
-     <div></div><br>
+     <br>
             <!-- /.row -->
           </div>
           <!-- /.container-fluid -->
