--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>AdminLTE 3 | Log in</title>
+    <title>Executive Tracking | Log in</title>
 
     <!-- Google Font: Source Sans Pro -->
     <link
@@ -24,18 +24,9 @@
     <link rel="stylesheet" href="../../dist/css/adminlte.min.css" />
   </head>
 
-  <body
-    class="hold-transition login-page"
-    ng-app="myApp"
-    ng-controller="myCtrl"
-    style="
-      background-image: url('/img/login.jpg');
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-      position: relative;
-    "
-  >
+  <body class="hold-transition login-page" ng-app="myApp" ng-controller="myCtrl"
+    style="background-image: url('/img/login.jpg'); background-position: center; background-repeat: no-repeat;
+      background-size: cover; position: relative;">
     <div class="login-box">
       <div class="login-logo">
         <a href="../../index2.html"><b>Login</b></a>
@@ -47,11 +38,7 @@
 
           <form>
             <div class="input-group mb-3">
-              <input
-                type="text"
-                ng-model="user.userName"
-                class="form-control"
-                placeholder="Email"
+              <input  type="text" ng-model="user.userName" class="form-control" placeholder="Email"
               />
               <div class="input-group-append">
                 <div class="input-group-text">
@@ -60,10 +47,7 @@
               </div>
             </div>
             <div class="input-group mb-3">
-              <input
-                type="password"
-                ng-model="user.password"
-                class="form-control"
+              <input type="password" ng-model="user.password" class="form-control"
                 placeholder="Password"
               />
               <div class="input-group-append">
