Sweet alerts updated according to backend

--- a/login.html
+++ b/login.html
@@ -7,18 +7,15 @@
 
     <!-- Google Font: Source Sans Pro -->
     <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback"
+      rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback"
     />
     <!-- Font Awesome -->
     <link
-      rel="stylesheet"
-      href="../../plugins/fontawesome-free/css/all.min.css"
+      rel="stylesheet" href="../../plugins/fontawesome-free/css/all.min.css"
     />
     <!-- icheck bootstrap -->
     <link
-      rel="stylesheet"
-      href="../../plugins/icheck-bootstrap/icheck-bootstrap.min.css"
+      rel="stylesheet" href="../../plugins/icheck-bootstrap/icheck-bootstrap.min.css"
     />
     <!-- Theme style -->
     <link rel="stylesheet" href="../../dist/css/adminlte.min.css" />
@@ -29,7 +26,7 @@
       background-size: cover; position: relative;">
     <div class="login-box">
       <div class="login-logo">
-        <a href="../../index2.html"><b>Login</b></a>
+        <a href="../../index.html"><b>Login</b></a>
       </div>
       <!-- /.login-logo -->
       <div class="card">
@@ -68,8 +65,7 @@
                 <button
                   type="submit"
                   ng-click="submitData()"
-                  class="btn btn-primary btn-block"
-                >
+                  class="btn btn-primary btn-block">
                   Sign In
                 </button>
               </div>
