--- a/master/Product/product.html
+++ b/master/Product/product.html
@@ -135,7 +135,6 @@
                                
                               <td>{{x.productId}}</td>
                                   <td>{{x.productName}}</td>
-                                  
                                   <td>{{x.productCode}}</td>   
                                   <td>{{x.description}}</td>
                                   <td>{{x.specification}}</td>
@@ -252,7 +251,7 @@
           <button type="submit" class="btn btn-outline-primary" ng-show="proedit" ng-click="addProduct();"
           ng-disabled= !myform.name.$valid||!myform.descript.$valid>Update</button>
           <button type="submit" class="btn btn-outline-danger" ng-show="prodelete"
-          ng-click="deleteProduct(x); loadProduct();">Delete</button>
+          ng-click="deleteProduct(); loadProduct();">Delete</button>
       </div>
   </div>
 </form>
